- fixed layout issues with the schedule builder

--- a/RockWeb/Styles/_blocks-core.less
+++ b/RockWeb/Styles/_blocks-core.less
@@ -197,7 +197,7 @@
     .actions {
         float: left;
         margin-left: 12px;
-        padding-top: 5px;
+        margin-top: 4px;
     }
 }
 
